added more ds code examples

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Let's learn!!</title>
 </head>
 <body>
-  <script type="text/javascript" src="index.js"></script>
+  <script type="text/javascript" src="DataStructure.js"></script>
 </body>
 </html>
